better layout, plots, gauges connected

--- a/analyze_entity_sentiment.ipynb
+++ b/analyze_entity_sentiment.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('transcript2.txt', 'r') as myfile:\n",
+    "with open('nvLDA70ZvbU_t.txt', 'r') as myfile:\n",
     "    transcript=myfile.read().replace('\\n', '')"
    ]
   },
@@ -93,15 +93,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: -0.6000000238418579\n",
-      "Magnitude: 3.299999952316284\n"
+      "Score: 0.0\n",
+      "Magnitude: 0.10000000149011612\n"
      ]
     }
    ],
