Added toggles for content axes output

--- a/analyze_entity_sentiment.ipynb
+++ b/analyze_entity_sentiment.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +69,18 @@
     "    response = client.analyze_sentiment(document)\n",
     "    sentiment = response.document_sentiment\n",
     "    print('Score: {}'.format(sentiment.score))\n",
-    "    print('Magnitude: {}'.format(sentiment.magnitude))"
+    "    print('Magnitude: {}'.format(sentiment.magnitude))\n",
+    "    \n",
+    "    return sentiment.score, sentiment.magnitude"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('nv6ALhScU0Y_t.txt', 'r') as myfile:\n",
+    "with open('webapp/static/transcripts/2z4RucTo0Sg_t.txt', 'r') as myfile:\n",
     "    transcript=myfile.read().replace('\\n', '')"
    ]
   },
@@ -93,20 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: -0.800000011920929\n",
-      "Magnitude: 1.7000000476837158\n"
+      "Score: 0.0\n",
+      "Magnitude: 0.800000011920929\n"
      ]
     }
    ],
    "source": [
-    "analyze_sentiment(transcript)"
+    "s, m = analyze_sentiment(transcript)"
    ]
   },
   {
