added angular and the backend worker process

--- a/notebooks/transcribe_gcs.ipynb
+++ b/notebooks/transcribe_gcs.ipynb
@@ -21,31 +21,26 @@
     "    from google.cloud import speech\n",
     "    from google.cloud.speech import enums\n",
     "    from google.cloud.speech import types\n",
+    "    import time\n",
     "    \n",
-    "    #client = speech.SpeechClient()\n",
-    "    client = speech.SpeechClient.from_service_account_json(\"/Users/daniel/Documents/Work/ProDev/Data Science/Keys/service_account_key.json\")\n",
+    "    client = speech.SpeechClient()\n",
+    "    #client = speech.SpeechClient.from_service_account_json(\"/Users/daniel/Documents/Work/ProDev/Data Science/Keys/service_account_key.json\")\n",
     "\n",
     "    audio = types.RecognitionAudio(uri=gcs_uri)\n",
     "    config = types.RecognitionConfig(\n",
-    "        #encoding=enums.RecognitionConfig.AudioEncoding.FLAC,\n",
-    "        #sample_rate_hertz=16000,\n",
     "        language_code='en-US')\n",
     "\n",
     "    operation = client.long_running_recognize(config, audio)\n",
-    "\n",
+    "    \n",
     "    print('Waiting for operation to complete...')\n",
-    "    response = operation.result(timeout=90)\n",
-    "\n",
+    "    \n",
+    "    response = operation.result()\n",
+    "    \n",
     "    transcription_str = ''\n",
     "    confidence_metric = 0\n",
     "    for result in response.results:\n",
     "        transcription_str += ' ' + format(result.alternatives[0].transcript)\n",
     "        confidence_metric = format(result.alternatives[0].confidence)\n",
-    "\n",
-    "    #for result in response.results:\n",
-    "        # The first alternative is the most likely one for this portion.\n",
-    "        #print(u'Transcript: {}'.format(result.alternatives[0].transcript))\n",
-    "        #print('Confidence: {}'.format(result.alternatives[0].confidence))\n",
     "        \n",
     "    return transcription_str, confidence_metric"
    ]
@@ -71,9 +66,10 @@
     }
    ],
    "source": [
-    "filename =   'yt2.wav'\n",
+    "filename =   'yt3.wav'\n",
     "audio_file = 'gs://audio_a/tests/' + filename\n",
-    "t, c = transcribe_gcs(audio_file)"
+    "t, c = transcribe_gcs(audio_file)\n",
+    "# transcribe_gcs(audio_file)"
    ]
   },
   {
@@ -85,12 +81,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " this is you know these Dreams by Masters they are idea for flipping an election to Trump is will take out these 13 Russians will put Facebook ads Annapolis way that will have will be putting our finger on on this election more than the entire media in the United States no match for 13 Russians and they're pizzagate conspiracy on on on Facebook but that you look at the language they use and and it's really kind of hilarious the dark Facebook at the darkest Espionage turning one American against another event they're turning one American against another I think the Russian Spa ounces in a few think about how the left has Academia of all to themselves but they've got the vast majority of the entertainment industry even though that they're kind of wising up to the fact that it did the politicized it's not selling nearly as well as as it used to and then with the media you've only got talk radio and some blogs other than that the left is got that as well and and is Peter teal says that the Silicon Valley is one party town and they still lost so it decide K through 12 they have the universities they have all of the media they have Silicon Valley they have Hollywood the one Lytle place a tiny little area where were there is still free speech and you've got an alternative point of view is on the internet and look at what the social media's are doing I mean if Trump would do anything useful that's why I apply the First Amendment to these Public Square social media companies is so finally the president mentioned something about this over the weekend he tweeted about how he's not going to let it happen that the social media Giants are going to control hot that they think they're going to censor conservatives in I have my phone was blowing up you were going crazy this is so great I can't believe he's doing this and I was thinking of what we've been under incredible fire since Election Day 2016 it once but a dog on people that voice is like your is your dominant on Twitter voice is like ours in Breitbart which is also big and social media were dominant on Facebook and very big on Twitter as well it say when when our side won all the sudden he was game on to start trying to send her and disciple and to boycott into Blacklist and to use all these totality refashion tactics and then all the sudden present fires off a tweet 2 days ago and I'm supposed to swell and I got I wasn't there I wasn't with let's just hope he didn't say don't worry I'll never forget you as he said to the angel moms for 18 months during the campaign\n"
+      " I'm that has green another transformation the little leopards comedians have grown enormously  this battle is not all five times bigger and then full breeding colors  this female has become a real Beauty  the mail. Use the problems with his tongue he can taste that she's being that way  but before he can get to her he has to fight off arrival mail  that all racing Against Time  that lives are so pretty that they only have one chance to make  he approaches her but she seems less than King  it might be that she's already mated and is already pregnant  you might be too late  she couldn't afford to waste time as soon as she's laid her eggs she'll die and all the males will be dead soon after their lives are lived in the brief wet season the van so that short lives Hastings their end  living fast and dying young it's a radical strategy for the place where resources are low for most of the year\n"
      ]
     }
    ],
    "source": [
     "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "for i in range(1,5):\n",
+    "    time.sleep(0.5)\n",
+    "    print(i)"
    ]
   },
   {
