--- a/notebooks/youtube_to_gc.ipynb
+++ b/notebooks/youtube_to_gc.ipynb
@@ -17,10 +17,11 @@
     "\n",
     "url = 'https://www.youtube.com/watch?v=N7-dg88gj6M' #47s news clip sensitive subject\n",
     "#url = 'https://www.youtube.com/watch?v=LDKw0Yr2KnA' cxRVohjplW4\n",
-    "url = 'https://www.youtube.com/watch?v=cxRVohjplW4'\n",
+    "#url = 'https://www.youtube.com/watch?v=yqrZBfk3lv0'# Sam Bee 8min\n",
+    "#url = 'https://www.youtube.com/watch?v=J5syfDmvZuI' #2:38 BBC\n",
     "\n",
     "yt = YouTube(url)\n",
-    "filename = 'yt2'\n",
+    "filename = 'yt1'\n",
     "if yt.streams.filter(only_audio=True).all():\n",
     "    yt.streams.filter(only_audio=True).first().download(filename=filename)\n",
     "\n",
@@ -43,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "<_io.BufferedRandom name='yt2.wav'>"
+       "<_io.BufferedRandom name='yt1.wav'>"
       ]
      },
      "execution_count": 2,
@@ -76,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Bucket: audio_a>, <Bucket: youtube_wavs>]\n"
+      "[<Bucket: audio_a>, <Bucket: second-kite-216700.appspot.com>, <Bucket: staging.second-kite-216700.appspot.com>, <Bucket: youtube_wavs>]\n"
      ]
     }
    ],
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -146,13 +147,14 @@
       "text/plain": [
        "['fuck_history.wav',\n",
        " 'musk_clip_mono.wav',\n",
-       " 'tests/N7-dg88gj6M.wav',\n",
+       " 'tests/2z4RucTo0Sg.wav',\n",
+       " 'tests/yqrZBfk3lv0.wav',\n",
        " 'tests/yt1.wav',\n",
        " 'tests/yt2.wav',\n",
        " 'tests/yt3.wav']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,6 +182,76 @@
    ],
    "source": [
     "'tests/N7-dg88gj6M.wav' in ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = {}\n",
+    "results['pol'] = 'meh'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"pol\": \"meh\"}'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "a = json.dumps(results)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tes\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'pol' in results:\n",
+    "    print('tes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pol': 1}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
    ]
   },
   {
